# leadflux-backend

./: .env.example  .replit  .vercelignore  ACTIVITY_AND_NOTIFICATIONS_GUIDE.md  ADD_GROQ_KEY.md  ADMIN_AND_AUTH_FIXES.md  ADVANCED_AI_FEATURES.md  AI_IMPLEMENTATION.md  AI_ML_FEATURES_SUMMARY.md  API_KEYS_IMPLEMENTATION.md  AUTHENTICATION_GUIDE.md  BACKEND_REPO_SETUP.md  CAMPAIGN_COPILOT_EMAIL_SYNC_IMPLEMENTATION.md  CHECK_GROQ_KEY.md  CHROME_EXTENSION_SETUP.md  COMPLETE_SAAS_GUIDE.md  COPY_FRONTEND_TO_NEW_REPO.md  CREATE_BACKEND_REPO.md  CREATE_FRONTEND_REPO.md  DATABASE_SETUP.md  DEALS_PIPELINE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ERROR_CHECKLIST.md  DEPLOY_BROWSER_AUTOMATION.md  DEPLOY_NOW.md  DEPLOY_TO_RENDER_NOW.md  DEPLOY_TO_REPLIT_NOW.md  DEPLOY_TO_VERCEL_NOW.md  EMAIL_FINDER_FEATURES.md  EMAIL_FINDER_VERIFIER_DESIGN.md  EMAIL_TOOLS_IMPLEMENTATION.md  FEATURES.md  FEATURE_ANALYSIS.md  FEATURE_CHECKLIST.md  FIX_LOGGER_ERROR.md  FIX_LOGO_UPLOAD.md  FIX_MANGUM_ERROR.md  FIX_NUMPY_ERROR.md  FIX_NUMPY_OPTIONAL.md  FIX_SUPABASE_DASHBOARD.md  (+122 more)
alembic/: env.py  env.py.example
api/: __init__.py  index.py
app/: __init__.py  cli.py  main.py
chrome-extension/: .gitignore  README.md  background.js  content.css  content.js  create_icons.py  manifest.json  maps_content.js  popup.html  popup.js
config/: __init__.py  settings.example.yaml
doctor_bot/: ANTI_DETECTION_WARNING.md  LEGAL_ALTERNATIVES.md  LEGAL_SITES.md  README.md  SOLUTION_ARCHITECTURE.md  YELLOWPAGES_WARNING.md  advanced_scraper.py  collect_data.py  complete_solution.py  corrected_example_fixed.py  (+9 more)
(+303 files in other folders)
